<resources>
    <string name="uxsdk_app_name">DJIUXSDK Beta</string>
    <string name="uxsdk_app_yes">Yes</string>
    <string name="uxsdk_app_no">No</string>
    <string name="uxsdk_app_ok">OK</string>
    <string name="uxsdk_app_save">Save</string>
    <string name="uxsdk_app_cancel">Cancel</string>
    <string name="uxsdk_app_unsetting">Unset</string>
    <string name="uxsdk_app_skip">Skip</string>
    <string name="uxsdk_app_ip_limit">Input is empty or invalid. Please retype.</string>
    <string name="uxsdk_error">Error</string>
    <string name="uxsdk_alert">Alert</string>
    <string name="uxsdk_tips">Tips</string>
    <string name="uxsdk_success">Success</string>
    <string name="uxsdk_enable">Enable</string>
    <string name="uxsdk_disable">Disable</string>
    <string name="uxsdk_not_a_num">N/A</string>
    <string name="uxsdk_user_login_widget_logout">Logout</string>
    <string name="uxsdk_user_login_widget_login">Login</string>
    <string name="uxsdk_user_login_widget_refresh">Refresh</string>
    <string name="uxsdk_user_login_widget_token">Token out of date</string>
    <string name="uxsdk_user_login_widget_not_logged_in">Not Logged In.</string>
    <string name="uxsdk_user_login_widget_logged_in">Logged in</string>
    <string name="uxsdk_user_login_widget_logged_in_not_authorized">Logged in but not authorized to unlock flyzones.</string>
    <string name="uxsdk_string_default_value">N/A</string>
    <string name="uxsdk_battery_percent">%1$d%%</string>
    <string name="uxsdk_battery_voltage_unit">%.2f V</string>
    <string name="uxsdk_gps_rtk_enabled">R</string>
    <string name="uxsdk_home_location_letter">H</string>
    <string name="uxsdk_unit_meters">m</string>
    <string name="uxsdk_unit_feet">ft</string>
    <string name="uxsdk_value_meters">%1$s m</string>
    <string name="uxsdk_value_feet">%1$s ft</string>
    <string name="uxsdk_unit_meter_per_second">m/s</string>
    <string name="uxsdk_unit_km_per_hr">km/h</string>
    <string name="uxsdk_unit_mile_per_hr">mph</string>
    <string name="uxsdk_altitude_title">H</string>
    <string name="uxsdk_agl_title">H AGL</string>
    <string name="uxsdk_amsl_altitude_title">H AMSL</string>
    <string name="uxsdk_distance_home_title">D</string>
    <string name="uxsdk_distance_rc_title">DRC</string>
    <string name="uxsdk_vps_title">VPS</string>
    <string name="uxsdk_horizontal_velocity_title">H.S.</string>
    <string name="uxsdk_vertical_velocity_title">V.S.</string>
    <string name="uxsdk_video_time_hours">%1$02d:%2$02d:%3$02d</string>
    <string name="uxsdk_video_time">%1$02d:%2$02d</string>
    <string name="uxsdk_camera_picture_format_raw">RAW</string>
    <string name="uxsdk_camera_picture_format_jpeg">JPEG</string>
    <string name="uxsdk_camera_picture_format_jpegraw">JPEG+RAW</string>
    <string name="uxsdk_camera_picture_format_tiff">TIFF</string>
    <string name="uxsdk_camera_picture_format_radiometic_jpeg">Radiometric JPEG</string>
    <string name="uxsdk_camera_picture_format_low_tiff">TIFF Linear Low</string>
    <string name="uxsdk_camera_picture_format_high_tiff">TIFF Linear High</string>
    <string name="uxsdk_camera_picture_format_jr">J+R</string>
    <string name="uxsdk_message_air_sense_warning_title">Another aircraft is nearby. Fly with caution.</string>
    <string name="uxsdk_message_air_sense_warning_content">Another aircraft is too close, please descend to a safer altitude.</string>
    <string name="uxsdk_message_air_sense_dangerous_content">Another aircraft is dangerously close, please descend to a safer altitude.</string>
    <string name="uxsdk_air_sense_terms_content">Please make sure you have read and understood the DJI AirSense Warnings.</string>
    <string name="uxsdk_air_sense_never_show">Don\'t show again</string>
    <string name="uxsdk_visual_radar_avoidance_disabled_message_post">Obstacle Avoidance Disabled. Fly with caution.</string>
    <string name="uxsdk_ei_title">EI</string>
    <string name="uxsdk_max_flight_height_limit">Max Flight Altitude: %1$s</string>
    <string name="uxsdk_list_item_flight_mode_title">Flight Mode</string>
    <string name="uxsdk_list_item_aircraft_battery_temp">Aircraft Battery Temperature</string>
    <string name="uxsdk_list_item_radio_quality">Radio Channel Quality</string>
    <string name="uxsdk_celsius_unit">%1$.1f°C</string>
    <string name="uxsdk_fahrenheit_unit">%1$.1f°F</string>
    <string name="uxsdk_kelvins_unit">%1$.1fK</string>
    <string name="uxsdk_list_item_travel_mode">Travel Mode</string>
    <string name="uxsdk_enter_travel_mode_success">The aircraft will automatically retract the landing gear and enter Travel Mode.</string>
    <string name="uxsdk_enter_travel_mode_failed">Failed to enter Travel Mode. %1$s</string>
    <string name="uxsdk_exit_travel_mode_failed">Failed to exit Travel Mode. %1$s</string>
    <string name="uxsdk_travel_mode_enter">Enter</string>
    <string name="uxsdk_travel_mode_exit">Exit</string>
    <string name="uxsdk_travel_mode_enter_confirmation">The aircraft will enter Travel Mode for easier transportation. Place the aircraft on a flat, hard surface and remove the gimbal. If the aircraft does not enter Travel Mode, adjust the landing gear manually.</string>
    <string name="uxsdk_list_item_rc_battery">Remote Controller Battery</string>
    <string name="uxsdk_rc_battery_percent">%1$d%%</string>
    <string name="uxsdk_list_item_rc_stick_mode">Control Stick Mode</string>
    <string name="uxsdk_rc_stick_mode_jp">JP</string>
    <string name="uxsdk_rc_stick_mode_usa">USA</string>
    <string name="uxsdk_rc_stick_mode_ch">CH</string>
    <string name="uxsdk_rc_stick_mode_custom">Custom</string>
    <string name="uxsdk_obstacle_action_type">Obstacle Action</string>
    <string name="uxsdk_obstacle_action_type_close">Close</string>
    <string name="uxsdk_obstacle_action_type_stop">Stop</string>
    <string name="uxsdk_obstacle_action_type_avoid">Avoid</string>
    <string name="uxsdk_list_item_sd_card">SD Card Remaining Capacity</string>
    <string name="uxsdk_list_item_format_button">Format</string>
    <string name="uxsdk_list_item_emmc">eMMC Remaining Capacity</string>
    <string name="uxsdk_storage_status_not_supported">Not Supported</string>
    <string name="uxsdk_storage_status_usb_connected">USB Connected</string>
    <string name="uxsdk_storage_status_missing">Not Inserted</string>
    <string name="uxsdk_storage_status_full">Full</string>
    <string name="uxsdk_storage_status_slow">Slow, %1$s</string>
    <string name="uxsdk_storage_status_write_protect">Write Protected</string>
    <string name="uxsdk_storage_status_not_formatted">Not Formatted</string>
    <string name="uxsdk_storage_status_formatting">Formatting&#8230;</string>
    <string name="uxsdk_storage_status_invalid">Invalid</string>
    <string name="uxsdk_storage_status_busy">Busy</string>
    <string name="uxsdk_storage_status_unknown_error">Unknown Error</string>
    <string name="uxsdk_storage_status_initial">Initializing</string>
    <string name="uxsdk_storage_status_recover_file">Repairing Video Files</string>
    <string name="uxsdk_storage_status_write_slow">Slow Write Speed</string>
    <string name="uxsdk_storage_status_formatting_recommended">Formatting Recommended</string>
    <string name="uxsdk_storage_status_needs_formatting">Formatting Required</string>
    <string name="uxsdk_storage_status_remaining_space_mb">%1$d MB</string>
    <string name="uxsdk_storage_status_remaining_space_gb">%1$.2f GB</string>
    <string name="uxsdk_storage_status_file_indices">No file indices</string>
    <string name="uxsdk_sd_card_format_confirmation">Are you sure you want to format the SD card?</string>
    <string name="uxsdk_sd_card_format_complete">SD card formatting completed.</string>
    <string name="uxsdk_sd_card_dialog_title">SD Card Format</string>
    <string name="uxsdk_sd_card_format_error">Error formatting SD card. %1$s</string>
    <string name="uxsdk_emmc_dialog_title">eMMC Storage Format</string>
    <string name="uxsdk_emmc_format_error">Error formatting internal storage (eMMC). %1$s</string>
    <string name="uxsdk_emmc_format_confirmation">Are you sure you want to format the internal storage (eMMC)?</string>
    <string name="uxsdk_emmc_format_complete">Internal storage (eMMC) formatting completed.</string>
    <string name="uxsdk_list_item_max_flight_distance">Max Flight Distance</string>
    <string name="uxsdk_list_item_max_flight_altitude">Max Flight Altitude</string>
    <string name="uxsdk_limit_required_error">Setting failed. Flight altitude exceeds max limit (400 ft/ 120 m)</string>
    <string name="uxsdk_limit_high_notice">Altering the maximum altitude setting could violate local laws and regulations (a 400 ft / 120 m flight limit is set by the FAA).\nYou are solely responsible and liable for the operation of the aircraft after altering these settings.\nDJI and its affiliates shall not be liable for any damages, whether in contract, tort (including negligence), or any other legal or equitable theory.</string>
    <string name="uxsdk_rtk_guidance_step1_title">Power On</string>
    <string name="uxsdk_rtk_guidance_step1_content">Press and hold the power button for 3 seconds. The indicator will display solid green to indicate initialization is complete</string>
    <string name="uxsdk_rtk_guidance_step2_image_desc">The device automatically restarts after switching to and from Broadcast mode. Restarting takes around 10s</string>
    <string name="uxsdk_rtk_guidance_btn_previous">Back</string>
    <string name="uxsdk_rtk_guidance_btn_next">Next</string>
    <string name="uxsdk_rtk_guidance_replay">Replay</string>
    <string name="uxsdk_rtk_guidance_step2_tip">Tap to switch modes</string>
    <string name="uxsdk_fpv_top_bar_rtk_title">RTK Positioning</string>
    <string name="uxsdk_fpv_top_bar_rtk_state_title">RTK Status</string>
    <string name="uxsdk_setting_menu_rtk_state_disconnect">Not Connected</string>
    <string name="uxsdk_fpv_top_bar_gps_title">GNSS Positioning</string>
    <string name="uxsdk_fpv_top_bar_gps_signal_title">Signal</string>
    <string name="uxsdk_fpv_top_bar_gps_signal_state_strong">Strong</string>
    <string name="uxsdk_fpv_top_bar_satellite_count">Satellites</string>
    <string name="uxsdk_setting_menu_flyc_gohome_altitude_title">RTH Altitude</string>
    <string name="uxsdk_setting_menu_flyc_max_height_title">Max Altitude</string>
    <string name="uxsdk_setting_menu_flyc_max_radius_title">Distance Limit</string>
    <string name="uxsdk_setting_menu_flyc_max_radius_title_limit">Max Flight Distance</string>
    <string name="uxsdk_checklist_manual_flight_mode_title">Flight Mode</string>
    <string name="uxsdk_setting_menu_flyc_fpa">Enable Multiple Flight Mode</string>
    <string name="uxsdk_setting_menu_flyc_mode_nosport">P (Positioning) Mode - Satellite and Vision Positioning sensors

        enabled for precise positioning.\n\nA (Attitude) Mode - Satellite and Vision Positioning sensors disabled. Only

        barometer is used for altitude control.\n\nF (Function) Mode - similar to P mode and allows access to

        Intelligent Flight Modes.</string>
    <string name="uxsdk_setting_menu_title_device_name">Device Name</string>
    <string name="uxsdk_setting_menu_title_about">About</string>
    <string name="uxsdk_setting_menu_title_led">LED Settings</string>
    <string name="uxsdk_setting_ui_rc_custom_navigation_led">Navigation Beacon On/Off</string>
    <string name="uxsdk_setting_common_leds_hide_mode">Hide Mode</string>
    <string name="uxsdk_setting_menu_top_auxiliary_light">Top Auxiliary Light</string>
    <string name="uxsdk_setting_menu_bottom_auxiliary_light">Bottom Auxiliary Light</string>
    <string name="uxsdk_setting_menu_beacon_led">Beacons</string>
    <string name="uxsdk_setting_menu_arm_led">Frame Arm LEDs</string>
    <string name="uxsdk_setting_menu_status_led">Status LEDs</string>
</resources>