<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:orientation="vertical"
    android:scrollbars="none"
    android:tag="setting:multi_rc:flyc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="afterDescendants">

        <dji.v5.ux.core.base.TextCell
            android:id="@+id/setting_led"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="setting:multi_rc:toast"
            app:uxsdk_text_cell_title="@string/uxsdk_setting_menu_title_led"
            app:uxsdk_text_cell_arrow="3"
            android:background="@drawable/uxsdk_selector_blue_rect_mask"
            />

        <dji.v5.ux.core.base.TextCell
            android:id="@+id/setting_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="setting:multi_rc:toast"
            app:uxsdk_text_cell_title="@string/uxsdk_setting_menu_title_device_name"
            app:uxsdk_text_cell_arrow="3"
            android:background="@drawable/uxsdk_selector_blue_rect_mask"
            />

        <dji.v5.ux.core.base.TextCell
            android:id="@+id/setting_common_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="setting:multi_rc:toast"
            app:uxsdk_text_cell_title="@string/uxsdk_setting_menu_title_about"
            app:uxsdk_text_cell_arrow="3"
            android:background="@drawable/uxsdk_selector_blue_rect_mask"
            />
    </LinearLayout>


</ScrollView>